updated recruitment page to add Vu and remove Manesha & overall minor tweaks

--- a/i300.html
+++ b/i300.html
@@ -255,7 +255,7 @@
           </a>
         </div>
         <h1 class="hero__heading">
-          <emphasis class="text--blue">i300</emphasis> Minipod</emphasis>
+          <emphasis class="text--blue text--remove-transform">i300</emphasis> Minipod</emphasis>
         </h1>
       </div>
       <div class="flex flex-col--sm-tablet ai-c gap--lg">
