--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 
   <main class="main">
     <section class="hero container">
-      <h1 class="hero__heading hero__heading--caps hero__heading--sm-width">
+      <h1 class="hero__heading hero__heading--sm-width">
         <emphasis><span class="text-1">Revolutionary</span></emphasis> <br> <span class="text-2">crypto
           mining</span> <span class="text-3">containers</span>
       </h1>
