--- a/recruitment.html
+++ b/recruitment.html
@@ -222,7 +222,7 @@
       <div class="flex flex-col ai-c gap--md">
         <h1 class="hero__heading">About Us</h1>
         <p class="hero__body">Digital Shovel is a rapidly growing tech manufacturing start-up based in Scarborough.
-          Celebrating our 5th year in operation, we are proud to be one of the leaders in both scale and innovation
+          Celebrating our 7th year in operation, we are proud to be one of the leaders in both scale and innovation
           within the blockchain infrastructure space in Canada.
         </p>
         <img class="about__img" src="images/photos/team/team-picnic.png" alt="Digital Shovel Team at the Picnic Party">
@@ -235,10 +235,10 @@
 
     <!-- Team -->
     <section class="team flex gap--md">
-      <div class="flex gap--md">
-        <img class="team__img" src="images/photos/team/scot-headshot-2.png" alt="Scot Johnson Headshot Photo">
+      <div class="team__member">
+        <img class="team__img" src="images/photos/team/scot-headshot_v4_recruitment-page.png" alt="Scot Johnson Headshot Photo">
         <div class="flex flex-col gap--sm">
-          <div class="flex flex-col jc-start ai-start gap--xsm">
+          <div class="team__name">
             <h3>Scot Johnson</h3>
             <span class="label__pill">CEO & President</span>
           </div>
@@ -249,29 +249,27 @@
         </div>
       </div>
 
-      <div class="flex gap--md">
-        <img class="team__img" src="images/photos/team/persia_v2.png" alt="Persia Khodarahmi Headshot Photo">
+      <div class="team__member">
+        <img class="team__img" src="images/photos/team/persia-3_recruitment-page.png" alt="Persia Khodarahmi Headshot Photo">
         <div class="flex flex-col gap--sm">
-          <div class="flex flex-col jc-start ai-start gap--xsm">
+          <div class="team__name">
             <h3>Persia Khodarahmi</h3>
-            <span class="label__pill">Operations Manager</span>
+            <span class="label__pill">Director of Operations</span>
           </div>
-          <p class="team__body">Persia Khodarahmi is the Operations Manager at Digital Shovel. She is responsible
+          <p class="team__body">Persia Khodarahmi is the Director of Operations at Digital Shovel. She is responsible
             for overseeing the day-to-day operations and is passionate about delivering high-quality products and
             services to clients and fostering a culture of excellence and collaboration.</p>
         </div>
       </div>
 
-      <div class="flex gap--md">
-        <img class="team__img" src="images/photos/team/manesha.png" alt="Manesha Persaud Headshot Photo">
+      <div class="team__member">
+        <img class="team__img" src="images/photos/team/vu-portrait-1_recruitment-page.png" alt="Vu NguyenTran Headshot Photo">
         <div class="flex flex-col gap--sm">
-          <div class="flex flex-col jc-start ai-start gap--xsm">
-            <h3>Manesha Persaud</h3>
-            <span class="label__pill">Talent Acquisition Coordinator</span>
+          <div class="team__name">
+            <h3>Vu NguyenTran</h3>
+            <span class="label__pill">Chief of Staff</span>
           </div>
-          <p class="team__body">Manesha Persaud has over 4 years of driving company results with talent. She is truly
-            passionate about attracting and retaining top talent to help the company thrive. She is dedicated to
-            ensuring that our company consistently acquires the best professionals in the industry.</p>
+          <p class="team__body">Vu NguyenTran is the Chief of Staff at Digital Shovel. He is responsible for driving executive alignment and organizational effectiveness, bridging vision with execution, and supporting cross-functional collaboration.</p>
         </div>
       </div>
     </section>
@@ -288,14 +286,6 @@
 
       <div class="perks__icons flex flex-col ai-c jc-c gap--lg">
         <div class="flex flex-col-mobile jc-c gap--md">
-          <div class="flex flex-col flex-row-tablet ai-c gap--sm">
-            <img class="perks__icon" src="images/icons/icon_framed_dog-paw.svg" alt="Dog Paw Icon">
-            <h5>Dog-Friendly<br><span class="text--blue">Office</span></h5>
-          </div>
-          <div class="flex flex-col flex-row-tablet ai-c gap--sm">
-            <img class="perks__icon" src="images/icons/icon_framed_gaming.svg" alt="Gaming Lunches Icon">
-            <h5>Gaming<br><span class="text--blue">Lunches</span></h5>
-          </div>
           <div class="flex flex-col flex-row-tablet ai-c gap--sm">
             <img class="perks__icon" src="images/icons/icon_framed_golf.svg" alt="Golf Icon">
             <h5>Golf<br><span class="text--blue">Simulator</span></h5>
@@ -362,97 +352,97 @@
         <h1 class="section__heading">Hybrid Schedule</h1>
       </div>
 
-      <div class="hybrid flex flex-col ai-c jc-c gap--lg">
-        <div class="hybrid__row flex flex-col-mobile gap--sm w-100">
-          <div class="hybrid__title-container flex flex-col jc-sb gap--xsm">
-            <h2 class="hybrid__title">Production<br>Staff</h2>
-            <h3 class="hybrid__subtitle">4-day work week</h3>
+      <div class="schedule flex flex-col ai-c jc-c gap--lg">
+        <div class="schedule__row flex flex-col-mobile gap--sm w-100">
+          <div class="schedule__title-container flex flex-col jc-sb gap--xsm">
+            <h2 class="schedule__title">Production<br>Staff</h2>
+            <h3 class="schedule__subtitle">4-day work week</h3>
           </div>
 
-          <div class="hybrid__day-container flex flex-col">
-            <span class="hybrid__day">Monday</span>
-            <div class="hybrid__location-container flex flex-col jc-c ai-c gap--xsm">
-              <span class="hybrid__location">On Site</span>
-              <img class="hybrid__icon" src="images/icons/icon_hardhat.svg" alt="Hardhat Icon">
+          <div class="schedule__day-container flex flex-col">
+            <span class="schedule__day">Monday</span>
+            <div class="schedule__location-container flex flex-col jc-c ai-c gap--xsm">
+              <span class="schedule__location">On Site</span>
+              <img class="schedule__icon" src="images/icons/icon_hardhat.svg" alt="Hardhat Icon">
             </div>
           </div>
 
-          <div class="hybrid__day-container flex flex-col">
-            <span class="hybrid__day">Tuesday</span>
-            <div class="hybrid__location-container flex flex-col jc-c ai-c gap--xsm">
-              <span class="hybrid__location">On Site</span>
-              <img class="hybrid__icon" src="images/icons/icon_hardhat.svg" alt="Hardhat Icon">
+          <div class="schedule__day-container flex flex-col">
+            <span class="schedule__day">Tuesday</span>
+            <div class="schedule__location-container flex flex-col jc-c ai-c gap--xsm">
+              <span class="schedule__location">On Site</span>
+              <img class="schedule__icon" src="images/icons/icon_hardhat.svg" alt="Hardhat Icon">
             </div>
           </div>
 
-          <div class="hybrid__day-container flex flex-col">
-            <span class="hybrid__day">Wednesday</span>
-            <div class="hybrid__location-container flex flex-col jc-c ai-c gap--xsm">
-              <span class="hybrid__location">On Site</span>
-              <img class="hybrid__icon" src="images/icons/icon_hardhat.svg" alt="Hardhat Icon">
+          <div class="schedule__day-container flex flex-col">
+            <span class="schedule__day">Wednesday</span>
+            <div class="schedule__location-container flex flex-col jc-c ai-c gap--xsm">
+              <span class="schedule__location">On Site</span>
+              <img class="schedule__icon" src="images/icons/icon_hardhat.svg" alt="Hardhat Icon">
             </div>
           </div>
 
-          <div class="hybrid__day-container flex flex-col">
-            <span class="hybrid__day">Thursday</span>
-            <div class="hybrid__location-container flex flex-col jc-c ai-c gap--xsm">
-              <span class="hybrid__location">On Site</span>
-              <img class="hybrid__icon" src="images/icons/icon_hardhat.svg" alt="Hardhat Icon">
+          <div class="schedule__day-container flex flex-col">
+            <span class="schedule__day">Thursday</span>
+            <div class="schedule__location-container flex flex-col jc-c ai-c gap--xsm">
+              <span class="schedule__location">On Site</span>
+              <img class="schedule__icon" src="images/icons/icon_hardhat.svg" alt="Hardhat Icon">
             </div>
           </div>
 
-          <div class="hybrid__day-container hybrid__day-container--off flex flex-col">
-            <span class="hybrid__day">Friday</span>
-            <div class="hybrid__location-container flex flex-col jc-c ai-c gap--xsm">
-              <span class="hybrid__location">Day Off</span>
-              <img class="hybrid__icon" src="images/icons/icon_hardhat.svg" alt="Hardhat Icon">
+          <div class="schedule__day-container schedule__day-container--off flex flex-col">
+            <span class="schedule__day">Friday</span>
+            <div class="schedule__location-container flex flex-col jc-c ai-c gap--xsm">
+              <span class="schedule__location">Day Off</span>
+              <img class="schedule__icon" src="images/icons/icon_hardhat.svg" alt="Hardhat Icon">
             </div>
           </div>
         </div>
 
-        <div class="hybrid__row flex flex-col-mobile gap--sm w-100">
-          <div class="hybrid__title-container flex jc-sb flex-col">
-            <h2 class="hybrid__title">Office<br>Staff</h2>
-            <h3 class="hybrid__subtitle">4.5-day work week</h3>
+        <div class="schedule__row flex flex-col-mobile gap--sm w-100">
+          <div class="schedule__title-container flex jc-sb flex-col">
+            <h2 class="schedule__title">Office<br>Staff</h2>
+            <h3 class="schedule__subtitle">4.5-day work week</h3>
           </div>
 
-          <div class="hybrid__day-container flex flex-col">
-            <span class="hybrid__day">Monday</span>
-            <div class="hybrid__location-container flex flex-col jc-c ai-c gap--xsm">
-              <span class="hybrid__location">In Office</span>
-              <img class="hybrid__icon" src="images/icons/icon_suitcase.svg" alt="Hardhat Icon">
+          <div class="schedule__day-container flex flex-col">
+            <span class="schedule__day">Monday</span>
+            <div class="schedule__location-container flex flex-col jc-c ai-c gap--xsm">
+              <span class="schedule__location">In Office</span>
+              <img class="schedule__icon" src="images/icons/icon_suitcase.svg" alt="Hardhat Icon">
             </div>
           </div>
 
-          <div class="hybrid__day-container flex flex-col">
-            <span class="hybrid__day">Tuesday</span>
-            <div class="hybrid__location-container flex flex-col jc-c ai-c gap--xsm">
-              <span class="hybrid__location">In Office</span>
-              <img class="hybrid__icon" src="images/icons/icon_suitcase.svg" alt="Hardhat Icon">
+          <div class="schedule__day-container flex flex-col">
+            <span class="schedule__day">Tuesday</span>
+            <div class="schedule__location-container flex flex-col jc-c ai-c gap--xsm">
+              <span class="schedule__location">In Office</span>
+              <img class="schedule__icon" src="images/icons/icon_suitcase.svg" alt="Hardhat Icon">
             </div>
           </div>
 
-          <div class="hybrid__day-container flex flex-col">
-            <span class="hybrid__day">Wednesday</span>
-            <div class="hybrid__location-container flex flex-col jc-c ai-c gap--xsm">
-              <span class="hybrid__location">In Office</span>
-              <img class="hybrid__icon" src="images/icons/icon_suitcase.svg" alt="Hardhat Icon">
+          <div class="schedule__day-container flex flex-col">
+            <span class="schedule__day">Wednesday</span>
+            <div class="schedule__location-container flex flex-col jc-c ai-c gap--xsm">
+              <span class="schedule__location">In Office</span>
+              <img class="schedule__icon" src="images/icons/icon_suitcase.svg" alt="Hardhat Icon">
             </div>
           </div>
 
-          <div class="hybrid__day-container flex flex-col">
-            <span class="hybrid__day">Thursday</span>
-            <div class="hybrid__location-container flex flex-col jc-c ai-c gap--xsm">
-              <span class="hybrid__location">In Office</span>
-              <img class="hybrid__icon" src="images/icons/icon_suitcase.svg" alt="Hardhat Icon">
+          <div class="schedule__day-container flex flex-col">
+            <span class="schedule__day">Thursday</span>
+            <div class="schedule__location-container flex flex-col jc-c ai-c gap--xsm">
+              <span class="schedule__location">In Office</span>
+              <img class="schedule__icon" src="images/icons/icon_suitcase.svg" alt="Hardhat Icon">
             </div>
           </div>
 
-          <div class="hybrid__day-container flex flex-col">
-            <span class="hybrid__day">Friday (half-day)</span>
-            <div class="hybrid__location-container hybrid__location-container--remote flex flex-col jc-c ai-c gap--xsm">
-              <span class="hybrid__location">Remote</span>
-              <img class="hybrid__icon" src="images/icons/icon_suitcase.svg" alt="Hardhat Icon">
+          <div class="schedule__day-container flex flex-col">
+            <span class="schedule__day">Friday (half-day)</span>
+            <div class="schedule__location-container schedule__location-container--remote flex flex-col jc-c ai-c gap--xsm">
+              <span class="schedule__location">Remote</span>
+              <img class="schedule__icon" src="images/icons/icon_suitcase.svg" alt="Hardhat Icon">
             </div>
           </div>
         </div>
