minor typography adjustment

--- a/recruitment.html
+++ b/recruitment.html
@@ -221,12 +221,12 @@
     <section class="about flex flex-col">
       <div class="flex flex-col ai-c gap--md">
         <h1 class="hero__heading">About Us</h1>
-        <p class="hero__body">Digital Shovel is a rapidly growing tech manufacturing start-up based in Scarborough.
+        <p>Digital Shovel is a rapidly growing tech manufacturing start-up based in Scarborough.
           Celebrating our 7th year in operation, we are proud to be one of the leaders in both scale and innovation
           within the blockchain infrastructure space in Canada.
         </p>
         <img class="about__img" src="images/photos/team/team-picnic.png" alt="Digital Shovel Team at the Picnic Party">
-        <p class="hero__body">Our 70,000 sq ft manufacturing facility enables us to build modular data centers and
+        <p>Our 70,000 sq ft manufacturing facility enables us to build modular data centers and
           develop new infrastructure related to the industry on site from the ground up. Our success stems from a
           dedicated and talented team of individuals who are passionate about pushing the boundaries of technology.
         </p>
@@ -453,7 +453,7 @@
     <section class="environment flex flex-col gap--md">
       <div class="flex flex-col gap--md">
         <h1 class="section__heading">Our Work Environment</h1>
-        <p class="hero__body">We offer a dynamic and rewarding work environment where our team members can explore
+        <p>We offer a dynamic and rewarding work environment where our team members can explore
           their full potential. Regardless of your job title, you will be allowed to undertake multiple roles and
           work on innovative technology that solves real-world problems. On top of that, we believe productivity is
           better achieved through a united team, so be prepared for company parties, gaming lunches, and
