minor typography change on press page

--- a/press.html
+++ b/press.html
@@ -260,9 +260,9 @@
     </div>
 
     <section id="announcements" class="press__release">
-      <h2 class="text__heading text--center">
+      <h1 class="hero__heading text--center">
         <emphasis class="text--blue">Press Releases</emphasis> & Announcements
-      </h2>
+      </h1>
 
       <div class="press__release-list">
 
