added home icon on recruitment page for schedule, re-arranged why join us icons

--- a/recruitment.html
+++ b/recruitment.html
@@ -236,7 +236,8 @@
     <!-- Team -->
     <section class="team flex gap--md">
       <div class="team__member">
-        <img class="team__img" src="images/photos/team/scot-headshot_v4_recruitment-page.png" alt="Scot Johnson Headshot Photo">
+        <img class="team__img" src="images/photos/team/scot-headshot_v4_recruitment-page.png"
+          alt="Scot Johnson Headshot Photo">
         <div class="flex flex-col gap--sm">
           <div class="team__name">
             <h3>Scot Johnson</h3>
@@ -250,7 +251,8 @@
       </div>
 
       <div class="team__member">
-        <img class="team__img" src="images/photos/team/persia-3_recruitment-page.png" alt="Persia Khodarahmi Headshot Photo">
+        <img class="team__img" src="images/photos/team/persia-3_recruitment-page.png"
+          alt="Persia Khodarahmi Headshot Photo">
         <div class="flex flex-col gap--sm">
           <div class="team__name">
             <h3>Persia Khodarahmi</h3>
@@ -263,13 +265,16 @@
       </div>
 
       <div class="team__member">
-        <img class="team__img" src="images/photos/team/vu-portrait-1_recruitment-page.png" alt="Vu NguyenTran Headshot Photo">
+        <img class="team__img" src="images/photos/team/vu-portrait-1_recruitment-page.png"
+          alt="Vu NguyenTran Headshot Photo">
         <div class="flex flex-col gap--sm">
           <div class="team__name">
             <h3>Vu NguyenTran</h3>
             <span class="label__pill">Chief of Staff</span>
           </div>
-          <p class="team__body">Vu NguyenTran is the Chief of Staff at Digital Shovel. He is responsible for driving executive alignment and organizational effectiveness, bridging vision with execution, and supporting cross-functional collaboration.</p>
+          <p class="team__body">Vu NguyenTran is the Chief of Staff at Digital Shovel. He is responsible for driving
+            executive alignment and organizational effectiveness, bridging vision with execution, and supporting
+            cross-functional collaboration.</p>
         </div>
       </div>
     </section>
@@ -287,43 +292,43 @@
       <div class="perks__icons flex flex-col ai-c jc-c gap--lg">
         <div class="flex flex-col-mobile jc-c gap--md">
           <div class="flex flex-col flex-row-tablet ai-c gap--sm">
-            <img class="perks__icon" src="images/icons/icon_framed_golf.svg" alt="Golf Icon">
-            <h5>Golf<br><span class="text--blue">Simulator</span></h5>
+            <img class="perks__icon" src="images/icons/icon_framed_hybrid.svg" alt="Hybrid Schedule Icon">
+            <h5>Hybrid<br><span class="text--blue">Schedule</span></h5>
           </div>
           <div class="flex flex-col flex-row-tablet ai-c gap--sm">
             <img class="perks__icon" src="images/icons/icon_framed_snacks.svg" alt="Healthy Snacks Icon">
             <h5>Healthy<br><span class="text--blue">Snacks</span></h5>
           </div>
           <div class="flex flex-col flex-row-tablet ai-c gap--sm">
-            <img class="perks__icon" src="images/icons/icon_framed_merch.svg" alt="Digital Shovel Merchandise Icon">
-            <h5>Digital Shovel<br><span class="text--blue">Merch</span></h5>
-          </div>
-          <div class="flex flex-col flex-row-tablet ai-c gap--sm">
             <img class="perks__icon" src="images/icons/icon_framed_gym.svg" alt="Gym Icon">
             <h5>Gym<br><span class="text--blue">Facility</span></h5>
+          </div>
+          <div class="flex flex-col flex-row-tablet ai-c gap--sm">
+            <img class="perks__icon" src="images/icons/icon_framed_health.svg" alt="Health Benefits Icon">
+            <h5>Health<br><span class="text--blue">Benefits</span></h5>
           </div>
         </div>
 
         <div class="flex flex-col-mobile jc-c gap--md">
           <div class="flex flex-col flex-row-tablet ai-c gap--sm">
-            <img class="perks__icon" src="images/icons/icon_framed_hybrid.svg" alt="Hybrid Schedule Icon">
-            <h5>Hybrid<br><span class="text--blue">Schedule</span></h5>
-          </div>
-          <div class="flex flex-col flex-row-tablet ai-c gap--sm">
             <img class="perks__icon" src="images/icons/icon_framed_growth.svg" alt="Growth Opportunities Icon">
             <h5>Growth<br><span class="text--blue">Opportunities</span></h5>
+          </div>
+          <div class="flex flex-col flex-row-tablet ai-c gap--sm">
+            <img class="perks__icon" src="images/icons/icon_framed_merch.svg" alt="Digital Shovel Merchandise Icon">
+            <h5>Digital Shovel<br><span class="text--blue">Merch</span></h5>
           </div>
           <div class="flex flex-col flex-row-tablet ai-c gap--sm">
             <img class="perks__icon" src="images/icons/icon_framed_loan-assistance.svg" alt="Loan Assistance Icon">
             <h5>Loan Assistance<br><span class="text--blue">Program</span></h5>
           </div>
           <div class="flex flex-col flex-row-tablet ai-c gap--sm">
-            <img class="perks__icon" src="images/icons/icon_framed_health.svg" alt="Health Benefits Icon">
-            <h5>Health<br><span class="text--blue">Benefits</span></h5>
-          </div>
-          <div class="flex flex-col flex-row-tablet ai-c gap--sm">
             <img class="perks__icon" src="images/icons/icon_framed_team.svg" alt="Team Building Activities Icon">
             <h5>Team Building<br><span class="text--blue">Activities</span></h5>
+          </div>
+          <div class="flex flex-col flex-row-tablet ai-c gap--sm">
+            <img class="perks__icon" src="images/icons/icon_framed_golf.svg" alt="Golf Icon">
+            <h5>Golf<br><span class="text--blue">Simulator</span></h5>
           </div>
         </div>
       </div>
@@ -395,7 +400,7 @@
             <span class="schedule__day">Friday</span>
             <div class="schedule__location-container flex flex-col jc-c ai-c gap--xsm">
               <span class="schedule__location">Day Off</span>
-              <img class="schedule__icon" src="images/icons/icon_hardhat.svg" alt="Hardhat Icon">
+              <img class="schedule__icon" src="images/icons/icon_home.svg" alt="Home Icon">
             </div>
           </div>
         </div>
@@ -440,9 +445,10 @@
 
           <div class="schedule__day-container flex flex-col">
             <span class="schedule__day">Friday (half-day)</span>
-            <div class="schedule__location-container schedule__location-container--remote flex flex-col jc-c ai-c gap--xsm">
+            <div
+              class="schedule__location-container schedule__location-container--remote flex flex-col jc-c ai-c gap--xsm">
               <span class="schedule__location">Remote</span>
-              <img class="schedule__icon" src="images/icons/icon_suitcase.svg" alt="Hardhat Icon">
+              <img class="schedule__icon" src="images/icons/icon_home.svg" alt="Home Icon">
             </div>
           </div>
         </div>
@@ -456,8 +462,7 @@
         <p>We offer a dynamic and rewarding work environment where our team members can explore
           their full potential. Regardless of your job title, you will be allowed to undertake multiple roles and
           work on innovative technology that solves real-world problems. On top of that, we believe productivity is
-          better achieved through a united team, so be prepared for company parties, gaming lunches, and
-          out-of-office gatherings and night-outs. If you are looking for a challenging and fulfilling career in the
+          better achieved through a united team, so be prepared for company parties, out-of-office gatherings, and night-outs. If you are looking for a challenging and fulfilling career in the
           tech industry with a passionate team, this is the place for you.
         </p>
       </div>
@@ -600,11 +605,12 @@
       <div class="footer__divider"></div>
       <div class="flex flex-col--lg-tablet jc-sb gap--sm">
         <div class="flex flex-col--lg-tablet gap--sm">
-          <small class="footer__copyright">© <span class="footer__copyright-year">2023</span> Digital Shovel Holdings Inc.</small>
+          <small class="footer__copyright">© <span class="footer__copyright-year">2023</span> Digital Shovel Holdings
+            Inc.</small>
         </div>
         <div class="flex gap--sm ai-c">
           <a target="_blank" href="https://www.youtube.com/@digital_shovel"><img class="footer__social"
-            src="images/icons/icon_youtube.svg" alt="YouTube Logo Icon"></a>
+              src="images/icons/icon_youtube.svg" alt="YouTube Logo Icon"></a>
           <a target="_blank" href="https://www.instagram.com/digital_shovel/"><img class="footer__social"
               src="images/icons/icon_instagram.svg" alt="Instagram Logo Icon"></a>
           <a target="_blank" href="https://twitter.com/Digital_Shovel"><img class="footer__social"
