made press logos clickable on homepage

--- a/index.html
+++ b/index.html
@@ -445,16 +445,16 @@
       </div>
       <div class="scroller" data-direction="left" data-speed="slow">
         <div class="scroller__inner">
-          <img class="scroller__inner-item" src="images/press-logos/benzinga.png" alt="Benzinga Logo">
-          <img class="scroller__inner-item" src="images/press-logos/bitcoin-magazine.png" alt="Benzinga Logo">
-          <img class="scroller__inner-item" src="images/press-logos/blockchain-bytes-daily.png" alt="Benzinga Logo">
-          <img class="scroller__inner-item" src="images/press-logos/blockster.png" alt="Benzinga Logo">
-          <img class="scroller__inner-item" src="images/press-logos/cision-prn.png" alt="Benzinga Logo">
-          <img class="scroller__inner-item" src="images/press-logos/Coinscreed.png" alt="Benzinga Logo">
-          <img class="scroller__inner-item" src="images/press-logos/cryptonews.png" alt="Benzinga Logo">
-          <img class="scroller__inner-item" src="images/press-logos/easydailycrypto.png" alt="Benzinga Logo">
-          <img class="scroller__inner-item" src="images/press-logos/ico-holder.png" alt="Benzinga Logo">
-          <img class="scroller__inner-item" src="images/press-logos/investors-observer.png" alt="Benzinga Logo">
+          <a href="press"><img class="scroller__inner-item" src="images/press-logos/benzinga.png" alt="Benzinga Logo"></a>
+          <a href="press"><img class="scroller__inner-item" src="images/press-logos/bitcoin-magazine.png" alt="Benzinga Logo"></a>
+          <a href="press"><img class="scroller__inner-item" src="images/press-logos/blockchain-bytes-daily.png" alt="Benzinga Logo"></a>
+          <a href="press"><img class="scroller__inner-item" src="images/press-logos/blockster.png" alt="Benzinga Logo"></a>
+          <a href="press"><img class="scroller__inner-item" src="images/press-logos/cision-prn.png" alt="Benzinga Logo"></a>
+          <a href="press"><img class="scroller__inner-item" src="images/press-logos/Coinscreed.png" alt="Benzinga Logo"></a>
+          <a href="press"><img class="scroller__inner-item" src="images/press-logos/cryptonews.png" alt="Benzinga Logo"></a>
+          <a href="press"><img class="scroller__inner-item" src="images/press-logos/easydailycrypto.png" alt="Benzinga Logo"></a>
+          <a href="press"><img class="scroller__inner-item" src="images/press-logos/ico-holder.png" alt="Benzinga Logo"></a>
+          <a href="press"><img class="scroller__inner-item" src="images/press-logos/investors-observer.png" alt="Benzinga Logo"></a>
         </div>
       </div>
     </section>
