updated nanopod page with new illustrations and photos

--- a/nanopod.html
+++ b/nanopod.html
@@ -253,12 +253,14 @@
           alt="NanoPOD Back View Illustration">
         <div class="gallery-container">
           <div class="gallery gallery__col-1">
-            <img class="photo photo-1 photo__i300" src="images/photos/nanopod/nano_back.png" alt="NanoPOD Back View">
-            <img class="photo photo-1 photo__i300" src="images/photos/nanopod/nano_side.png" alt="NanoPOD Side View">
-            <img class="photo photo-1 photo__i300" src="images/photos/nanopod/nano_open-door.png"
-              alt="NanoPOD Side View with Open Door">
-            <img class="photo photo-1 photo__i300" src="images/photos/nanopod/nano_inside.png"
-              alt="NanoPOD Inside View">
+            <img class="photo photo-1 photo__i300" src="images/photos/nanopod/nanopod_front_door-open_right-view.webp" alt="NanoPOD Front Right View">
+            <img class="photo photo-1 photo__i300" src="images/photos/nanopod/nanopod_front_door-open_left-side.webp" alt="NanoPOD Front Left View">
+            <img class="photo photo-1 photo__i300" src="images/photos/nanopod/nanopod_front_door-closed.webp"
+              alt="NanoPOD Front View with Closed Door">
+            <img class="photo photo-1 photo__i300" src="images/photos/nanopod/nanopod_back.webp"
+              alt="NanoPOD Back View">
+            <img class="photo photo-1 photo__i300" src="images/photos/nanopod/nanopod_back-side.webp"
+              alt="NanoPOD Back Side View">
             <div class="modal">
               <div class="modal-container">
                 <span class="close">
@@ -392,9 +394,9 @@
         <p class="text__body text--center">
           Main container, racking, back-sheets, and Smart PDUs
         </p>
-        <div class="bundle__illustrations bundle__illustrations--i300">
-          <img src="images/illustrations/nanopod-front_with-text.svg" alt="NanoPOD Illustration Front Side">
-          <img src="images/illustrations/nanopod-back_with-text.svg" alt="NanoPOD Illustration Back Side">
+        <div class="bundle__illustrations">
+          <img class=" bundle__illustrations--nanopod" src="images/illustrations/nanopod-front_with-text.svg" alt="NanoPOD Illustration Front Side">
+          <img class=" bundle__illustrations--nanopod" src="images/illustrations/nanopod-back_with-text.svg" alt="NanoPOD Illustration Back Side">
           <div class="minipod__illustrations--shadow"></div>
         </div>
         <a href="contact" class="btn btn--primary mtop--2xl mbot--lg">Contact Sales
