added podcast as a select option of "learned bluax from"

--- a/bluAX.html
+++ b/bluAX.html
@@ -22,7 +22,7 @@
   <meta name="twitter:image:alt" content="Digital Shovel Logo" />
 
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="dist/style.min.css?v=2.2.1" />
+  <link rel="stylesheet" href="dist/style.min.css?v=2.2.2" />
 
   <!-- Favicon -->
   <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon" />
@@ -384,6 +384,7 @@
                 <option value="Friend">Friend</option>
                 <option value="Co-worker">Co-worker</option>
                 <option value="Advertisement">Advertisement</option>
+                <option value="Podcast">Podcast</option>
               </optgroup>
             </select>
           </div>
